--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,25 +1,33 @@
 
-name: laravel project deploy
-on:
-  push:
-    branches:
-      - master
-jobs:
-  test:
-    name: Deploy
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2.1.0
+// .github/workflows/laravel.yml
+
+deploy:
+
+  runs-on: ubuntu-latest
+
+  steps:
+
+    - name: Checkout
+
+      uses: actions/checkout@v2
+
+    - name: Deployment
+
+      uses: appleboy/ssh-action@main
+
       with:
-        fetch-depth: 2
-    - name: test
-      uses: Tofik100/test@master
-      with:
-        
-        host: "${{ secrets.SSH_HOST }}"
+        username: ${{ secrets.SSH_USERNAME }}
 
-        key: "${{ secrets.SSH_PRIVATE_KEY }}"
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-        username: "${{ secrets.SSH_USERNAME }}"
+        host: ${{ secrets.SSH_HOST }}
 
-        ssh_known_hosts: "${{ secrets.SSH_KNOWN_HOSTS }}"
+        ssh_known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
+
+        script: |
+
+          cd /var/www/html/
+
+          git checkout -f 
+
+          git pull
