--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -9,7 +9,8 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.1.0
+    # - uses: actions/checkout@v2.1.0
+      uses: r-lib/actions/check-r-package@master
       with:
         fetch-depth: 2
     - name: test
