--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -9,8 +9,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-    # - uses: actions/checkout@v2.1.0
-      uses: r-lib/actions/check-r-package@master
+    - uses: actions/checkout@v2.1.0
       with:
         fetch-depth: 2
     - name: test
