--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,7 +13,7 @@ jobs:
       with:
         fetch-depth: 2
     - name: test
-      uses: Tofik100/test@master
+      uses: SamKirkland/FTP-Deploy-Action@3.1.1
       with:
         
         host: ${{ secrets.SSH_HOST }}
