--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,7 +13,7 @@ jobs:
       with:
         fetch-depth: 2
     - name: test
-      uses: Tofik100/test@3.1.1
+      uses: Tofik100/test@master
       with:
         
         host: ${{ secrets.SSH_HOST }}
