--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -25,12 +25,16 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+     with:
+        fetch-depth: 2
+    - name: test
+      uses: Tofik100/test@master
+      with:
+        
+        host: ${{ secrets.SSH_HOST }}
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+        ssh_known_hosts: ${{ secrets.SSH_USERNAME }}
+
+        username: ${{ secrets.SSH_USERNAME }}
