--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,10 +16,8 @@ jobs:
       uses: Tofik100/test@master
       with:
         
-        ssh_host: ${{ secrets.SSH_HOST }}
-
+        ssh_host: "51.68.94.64"
+        ssh_user: "root"
+        ssh_port: 22
         private_ssh_key: ${{ secrets.SSH_KEY }}
-
         ssh_known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
-
-        ssh_username: ${{ secrets.SSH_USERNAME }}
