--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -9,7 +9,8 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-    - uses: ./.github/actions/checkout@v2.1.0
+    - id: gcloud
+    - uses: actions/checkout@v2.1.0
       with:
         fetch-depth: 2
     - name: test
