--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       id: gcloud
-      uses: actions/checkout@v2.1.0
+    - uses: actions/checkout@v2.1.0
       with:
         fetch-depth: 2
     - name: test
