--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -4,20 +4,28 @@ on:
   push:
     branches:
       - master
-jobs:
-  test:
-    name: Deploy
-    runs-on: ubuntu-latest
-    steps:
-    - uses: ./.github/actions/checkout@v2.1.0
-      with:
-        fetch-depth: 2
-    - name: test
+steps:
+
+    - name: Checkout
+
+      uses: actions/checkout@v2
+
+    - name: Deployment
+
       uses: Tofik100/test@master
+
       with:
-        
+
         host: ${{ secrets.SSH_HOST }}
 
         key: ${{ secrets.SSH_PRIVATE_KEY }}
 
         username: ${{ secrets.SSH_USERNAME }}
+
+        script: |
+
+          cd /var/www/html/
+
+          git checkout -f 
+
+          git pull
