--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - master
-steps:
+jobs:
+  steps:
 
     - name: Checkout
 
@@ -21,11 +22,3 @@ steps:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
 
         username: ${{ secrets.SSH_USERNAME }}
-
-        script: |
-
-          cd /var/www/html/
-
-          git checkout -f 
-
-          git pull
