--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -5,18 +5,17 @@ on:
     branches:
       - master
 jobs:
-  steps:
-
-    - name: Checkout
-
-      uses: actions/checkout@v2
-
-    - name: Deployment
-
-      uses: Tofik100/test@master
-
+  test:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - uses: ./.github/actions/checkout@v2.1.0
       with:
-
+        fetch-depth: 2
+    - name: test
+      uses: Tofik100/test@master
+      with:
+        
         host: ${{ secrets.SSH_HOST }}
 
         key: ${{ secrets.SSH_PRIVATE_KEY }}
