--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -4,26 +4,32 @@ on:
   push:
     branches:
       - master
-jobs:
-  test:
-    name: Deploy
-    runs-on: ubuntu-latest
-    steps:
-    - uses: ./.github/actions/checkout@v2.1.0
-      with:
-        fetch-depth: 2
-    - name: test
+deploy:
+
+  runs-on: ubuntu-latest
+
+  steps:
+
+    - name: Checkout
+
+      uses: actions/checkout@v2
+
+    - name: Deployment
+
       uses: Tofik100/test@master
+
       with:
-        
-        SSH_HOST: ${{ secrets.SSH_HOST }}
 
-        SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
+        host: ${{ secrets.SSH_HOST }}
 
-        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        username: ${{ secrets.SSH_USERNAME }}
 
-        SSH_KNOWN_HOSTS: ${{ secrets.SSH_KNOWN_HOSTS }}
+        script: |
 
-        script: "cd /var/www/html/test && ./deployer.sh"
+          cd /var/www/html/
+
+          git checkout -f 
+
+          git pull
