--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -10,13 +10,14 @@ jobs:
   runs-on: ubuntu-latest
 
   steps:
-
-    - name: Checkout
-
-      uses: actions/checkout@v2
-
-    - name: Deployment
-
+    test:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - uses: ./.github/actions/checkout@v2.1.0
+      with:
+        fetch-depth: 2
+    - name: test
       uses: Tofik100/test@master
 
       with:
