--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -5,10 +5,8 @@ on:
     branches:
       - master
 jobs:
-  deploy:
-
+  name: test
   runs-on: ubuntu-latest
-
   steps:
     test:
     name: Deploy
