--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -5,16 +5,16 @@ on:
     branches:
       - master
 jobs:
-  name: test
-  runs-on: ubuntu-latest
-  steps:
-    test:
-    name: Deploy
+  - name: test
     runs-on: ubuntu-latest
     steps:
-    - uses: ./.github/actions/checkout@v2.1.0
-      with:
-        fetch-depth: 2
+      test:
+      name: Deploy
+      runs-on: ubuntu-latest
+      steps:
+      - uses: ./.github/actions/checkout@v2.1.0
+        with:
+          fetch-depth: 2
     - name: test
       uses: Tofik100/test@master
 
