--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -12,7 +12,7 @@ jobs:
       name: Deploy
       runs-on: ubuntu-latest
       steps:
-      - uses: ./.github/actions/checkout@v2.1.0
+      uses: ./.github/actions/checkout@v2.1.0
     - name: test
       uses: Tofik100/test@master
 
