--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Deploy to master
       uses: Tofik100/test@master
       with:
-        username: root
-        host: 51.68.94.64
+        username: 'root'
+        host: '51.68.94.64'
         password: ${{ secrets.SSH_PASSWORD }}
-        script: 'cd /var/www/html && ./server_deploy.sh'
+        script: 'cd /var/www/html && ./deployer.sh'
