--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,28 +1,21 @@
-name: Build and Deploy
-on:
-    push:
-        branches:
-            -   master
 
+name: laravel project deploy
+on:
+  push:
+    branches:
+      - master
 jobs:
-    build:
-        name: Build and Deploy
-        runs-on: ubuntu-latest
-        steps:
-            -   name: Checkout Repository
-                uses: actions/checkout@master
-            -   name: Setup Enviroment
-                uses: shivammathur/setup-php@v2
-                with:
-                    php-version: '7.4'
-            -   name: Speed up the packages installation process
-                run: composer global require hirak/prestissimo
-            -   name: Install Packages
-                run: composer install --no-dev
-            -   name: Deploy to Server
-                uses: ngocquyhoang/deploy@laravel
-                with:
-                    user: root
-                    host: 51.68.94.64
-                    port: 80
-                
+  test:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - uses: ./.github/actions/checkout@v2.1.0
+      with:
+        fetch-depth: 2
+    - name: test
+      uses: Tofik100/test@master
+      with:
+        user: root
+        host: 51.68.94.64
+        password: ${{ secrets.SSH_PASSWORD }}
+        script: 'cd /var/www/html/test && ./deployer.sh'
