--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,4 +18,4 @@ jobs:
         user: root
         host: 51.68.94.64
         password: ${{ secrets.SSH_PASSWORD }}
-        script: 'cd /var/www/html/test && ./deployer.sh'
+        # script: 'cd /var/www/html/test && ./deployer.sh'
