last more changes

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,21 +1,42 @@
-
-name: laravel project deploy
-on:
-  push:
-    branches:
-      - master
-jobs:
-  test:
-    name: Deploy
-    runs-on: ubuntu-latest
-    steps:
-    - uses: ./.github/actions/checkout@v2.1.0
-      with:
-        fetch-depth: 2
-    - name: test
-      uses: Tofik100/test@master
-      with:
-        user: root
-        host: 51.68.94.64
-        password: ${{ secrets.SSH_PASSWORD }}
-        script: 'cd /var/www/html/test && ./deployer.sh'
+    name: DEV Deploy
+    
+    on:
+      workflow_dispatch:
+    
+    jobs:
+    
+      deploy:
+        runs-on: ubuntu-latest
+    
+        steps:
+          - name: Checkout
+            uses: actions/checkout@v2
+    
+          - name: Deployment
+    
+            uses: Tofik100/test@master
+    
+            with:
+              host: ${{ secrets.HOST }}
+              username: ${{ secrets.USERNAME }}
+              key: ${{ secrets.KEY }}
+    
+              script: |
+                cd /var/www/html/test
+                
+                php artisan down
+                
+                git checkout -f
+                git branch -u origin/dev
+                git pull
+                
+                composer install --optimize-autoloader --no-dev
+                
+                npm install
+                npm update
+                npm run production
+                
+                php artisan cache:clear
+                php artisan view:clear
+                php artisan config:cache
+                php artisan up
